--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 $header: '.l-header';
 $menuMobile: '.c-dropdown__menu';
 $overlay: '.c-overlay';
+$content: '.c-content';
 
 #{$header} {
   padding-top: 0.9375rem;
@@ -158,5 +159,52 @@ $overlay: '.c-overlay';
   &.hidden {
     // height: 0;
     opacity: 0;
+  }
+}
+
+.l-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 74vh;
+  max-width: 71.5rem;
+  margin: 4rem auto 0;
+
+  #{$content} {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    &--title {
+      font-weight: 700;
+      font-size: 4.8rem;
+    }
+
+    &--description {
+      margin-top: 4.125rem;
+      font-size: 1.125rem;
+      color: variables.$gray-400;
+      line-height: 1.75rem;
+      width: 90%;
+    }
+
+    &--more {
+      margin-top: 4.125rem;
+      height: 3.5rem;
+      width: 10.25rem;
+      background-color: variables.$black-800;
+      border-radius: 0.625rem;
+      border: none;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+
+  .c-image__wrap {
+    background: url(../images/image-hero-desktop.png) no-repeat;
+    background-size: contain;
+    background-position: right;
   }
 }
