--- a/styles/style.css
+++ b/styles/style.css
@@ -186,6 +186,14 @@ a:hover {
   max-width: 71.5rem;
   margin: 4rem auto 0;
 }
+@media (max-width: 900px) {
+  .l-main {
+    margin-top: 2rem;
+    grid-template-areas: "a" "b";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+  }
+}
 .l-main .c-content {
   width: 90%;
   display: flex;
@@ -193,9 +201,22 @@ a:hover {
   justify-content: center;
   align-items: flex-start;
 }
+@media (max-width: 900px) {
+  .l-main .c-content {
+    margin-top: 2rem;
+    text-align: center;
+    width: 100%;
+    align-items: center;
+  }
+}
 .l-main .c-content--title {
   font-weight: 700;
   font-size: 4.8rem;
+}
+@media (max-width: 900px) {
+  .l-main .c-content--title {
+    font-size: 2.25rem;
+  }
 }
 .l-main .c-content--description {
   margin-top: 4.125rem;
@@ -203,6 +224,12 @@ a:hover {
   color: dimgray;
   line-height: 1.75rem;
   width: 90%;
+}
+@media (max-width: 900px) {
+  .l-main .c-content--description {
+    margin-top: 2rem;
+    font-size: 1rem;
+  }
 }
 .l-main .c-content--more {
   margin-top: 4.125rem;
@@ -215,10 +242,23 @@ a:hover {
   font-weight: bold;
   cursor: pointer;
 }
+@media (max-width: 900px) {
+  .l-main .c-content--more {
+    margin-top: 2rem;
+  }
+}
 .l-main .c-image__wrap {
   background: url(../images/image-hero-desktop.png) no-repeat;
   background-size: contain;
   background-position: right;
+}
+@media (max-width: 900px) {
+  .l-main .c-image__wrap {
+    grid-area: a;
+    height: 80vw;
+    background: url(../images/image-hero-mobile.png) no-repeat;
+    background-size: contain;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
