--- a/sass/style.scss
+++ b/sass/style.scss
@@ -177,6 +177,7 @@ $content: '.c-content';
   }
 
   #{$content} {
+    position: relative;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -222,9 +223,38 @@ $content: '.c-content';
       color: white;
       font-weight: bold;
       cursor: pointer;
+      transition: all 0.6s;
 
       @include mixins.mobile {
         margin-top: 2rem;
+      }
+
+      &:hover {
+        background-color: variables.$white;
+        border: 1px solid variables.$black-800;
+        color: variables.$black-800;
+      }
+    }
+
+    &__colab {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      gap: 2.375rem;
+
+      @include mixins.mobile {
+        width: 90%;
+        position: static;
+        margin: 3rem 0 5rem;
+        gap: 1.75rem;
+      }
+
+      &--item {
+        img {
+          width: 100%;
+        }
       }
     }
   }
