--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,7 @@ a:hover {
   }
 }
 .l-main .c-content {
+  position: relative;
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -241,11 +242,36 @@ a:hover {
   color: white;
   font-weight: bold;
   cursor: pointer;
+  transition: all 0.6s;
 }
 @media (max-width: 900px) {
   .l-main .c-content--more {
     margin-top: 2rem;
   }
+}
+.l-main .c-content--more:hover {
+  background-color: #fafafa;
+  border: 1px solid #141414;
+  color: #141414;
+}
+.l-main .c-content__colab {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  gap: 2.375rem;
+}
+@media (max-width: 900px) {
+  .l-main .c-content__colab {
+    width: 90%;
+    position: static;
+    margin: 3rem 0 5rem;
+    gap: 1.75rem;
+  }
+}
+.l-main .c-content__colab--item img {
+  width: 100%;
 }
 .l-main .c-image__wrap {
   background: url(../images/image-hero-desktop.png) no-repeat;
