--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,7 +53,6 @@ $content: '.c-content';
         margin-right: 1rem;
         display: flex;
         align-items: center;
-        height: 100%;
 
         &::after {
           content: url(../images/icon-arrow-down.svg);
@@ -61,7 +60,7 @@ $content: '.c-content';
           right: -1rem;
         }
 
-        .c-dropdown__menu {
+        .c-dropdown__main {
           @include mixins.dropdown;
           max-height: 0;
           opacity: 0;
@@ -74,10 +73,10 @@ $content: '.c-content';
           }
         }
 
-        .c-dropdown__menu.left {
+        .c-dropdown__main.left {
           left: 0;
         }
-        .c-dropdown__menu.right {
+        .c-dropdown__main.right {
           right: -1.25rem;
         }
 
@@ -85,7 +84,7 @@ $content: '.c-content';
           &::after {
             content: url(../images/icon-arrow-up.svg);
           }
-          .c-dropdown__menu {
+          .c-dropdown__main {
             padding: 1.5rem;
             max-height: 20rem;
             opacity: 1;
