--- a/styles/style.css
+++ b/styles/style.css
@@ -172,10 +172,10 @@ a:hover {
   background-color: rgba(0, 0, 0, 0.6);
   transition: all 0.4s;
   opacity: 1;
-  z-index: -1;
+  animation: show 0.4s;
 }
 .c-overlay.hidden {
-  opacity: 0;
+  display: none;
 }
 
 .l-main {
@@ -283,6 +283,15 @@ a:hover {
     height: 80vw;
     background: url(../images/image-hero-mobile.png) no-repeat;
     background-size: contain;
+  }
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
