--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ a:hover {
   transition: all 0.2s ease-out;
   z-index: 20;
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .l-header .c-navbar .btn__menu {
     display: block;
   }
@@ -66,7 +66,7 @@ a:hover {
   height: 3.125rem;
   gap: 2rem;
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .l-header .c-navbar .c-menu {
     display: none;
   }
@@ -93,6 +93,7 @@ a:hover {
   flex-direction: column;
   gap: 1rem;
   overflow: hidden;
+  z-index: 10;
   max-height: 0;
   opacity: 0;
   transition: all 0.3s ease-in-out 0.2s;
@@ -124,7 +125,7 @@ a:hover {
   align-items: center;
   gap: 2rem;
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .l-header .c-navbar .c-auth__area {
     display: none;
   }
@@ -204,11 +205,11 @@ a:hover {
 .l-main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 74vh;
+  grid-template-rows: min(74vh, 50rem);
   max-width: 71.5rem;
   margin: 4rem auto 0;
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .l-main {
     margin-top: 2rem;
     grid-template-areas: "a" "b";
@@ -224,7 +225,12 @@ a:hover {
   justify-content: center;
   align-items: flex-start;
 }
-@media (max-width: 900px) {
+@media (max-height: 700px) {
+  .l-main .c-content {
+    width: 75%;
+  }
+}
+@media (max-width: 56.25rem) {
   .l-main .c-content {
     margin-top: 2rem;
     text-align: center;
@@ -236,7 +242,12 @@ a:hover {
   font-weight: 700;
   font-size: 4.8rem;
 }
-@media (max-width: 900px) {
+@media (max-height: 700px) {
+  .l-main .c-content--title {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 56.25rem) {
   .l-main .c-content--title {
     font-size: 2.25rem;
   }
@@ -248,7 +259,13 @@ a:hover {
   line-height: 1.75rem;
   width: 90%;
 }
-@media (max-width: 900px) {
+@media (max-height: 700px) {
+  .l-main .c-content--description {
+    margin-top: 2rem;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 56.25rem) {
   .l-main .c-content--description {
     margin-top: 2rem;
     font-size: 1rem;
@@ -266,7 +283,12 @@ a:hover {
   cursor: pointer;
   transition: all 0.6s;
 }
-@media (max-width: 900px) {
+@media (max-height: 700px) {
+  .l-main .c-content--more {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 56.25rem) {
   .l-main .c-content--more {
     margin-top: 2rem;
   }
@@ -284,7 +306,7 @@ a:hover {
   align-items: center;
   gap: 2.375rem;
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .l-main .c-content__colab {
     width: 90%;
     position: static;
@@ -300,7 +322,7 @@ a:hover {
   background-size: contain;
   background-position: right;
 }
-@media (max-width: 900px) {
+@media (max-width: 56.25rem) {
   .l-main .c-image__wrap {
     grid-area: a;
     height: 80vw;
