--- a/styles/style.css
+++ b/styles/style.css
@@ -207,10 +207,12 @@ a:hover {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: min(74vh, 50rem);
   max-width: 71.5rem;
+  width: 90%;
   margin: 4rem auto 0;
 }
 @media (max-width: 56.25rem) {
   .l-main {
+    width: 100%;
     margin-top: 2rem;
     grid-template-areas: "a" "b";
     grid-template-columns: 1fr;
@@ -310,6 +312,7 @@ a:hover {
   .l-main .c-content__colab {
     width: 90%;
     position: static;
+    justify-content: center;
     margin: 3rem 0 5rem;
     gap: 1.75rem;
   }
