--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -6,17 +6,13 @@
   align-items: center;
 }
 
-@mixin dropdown {
+@mixin submenu {
   position: absolute;
-  top: 3.125rem;
-  align-items: flex-start;
-  border-radius: 0.625rem;
+  top: 3rem;
+  padding: 1.5rem;
+  border-radius: variables.$global-radius;
   background-color: white;
   box-shadow: 0 1rem 2rem hsl(0, 0%, 41%, 0.2);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  overflow: hidden;
   z-index: 10;
 }
 
