--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,118 +2,100 @@
 @use 'mixins';
 @use 'variables';
 
-$header: '.l-header';
+$menu: '.c-menu';
 $menuMobile: '.c-dropdown__menu';
-$overlay: '.c-overlay';
 $content: '.c-content';
 
-#{$header} {
-  padding-top: 0.9375rem;
+.c-navbar {
+  padding: 1rem 2rem;
+  @include mixins.center;
+  justify-content: space-between;
+  gap: 3rem;
+}
 
-  .c-navbar {
+.c-menu__btn {
+  display: none;
+  background: url(../images/icon-menu.svg) center no-repeat;
+  border: none;
+  cursor: pointer;
+  height: 1.625rem;
+  position: relative;
+  width: 1.625rem;
+  transition: all 0.2s ease-out;
+  z-index: 20;
+
+  @include mixins.mobile {
+    display: block;
+  }
+
+  &--close {
+    background: url(../images/icon-close-menu.svg) center no-repeat;
+  }
+}
+
+#{$menu} {
+  flex: 1 1 auto;
+  display: flex;
+  align-items: center;
+  height: 3.125rem;
+  gap: 2rem;
+
+  @include mixins.mobile {
+    display: none;
+  }
+
+  &__item {
+    position: relative;
+    height: 100%;
     @include mixins.center;
-    justify-content: space-between;
-    width: min(85rem, 90%);
-    margin: 0 auto;
-    gap: 3rem;
 
-    .btn__menu {
-      display: none;
-      background: url(../images/icon-menu.svg) center no-repeat;
-      border: none;
-      cursor: pointer;
-      height: 1.625rem;
-      position: relative;
-      width: 1.625rem;
-      transition: all 0.2s ease-out;
-      z-index: 20;
-
-      @include mixins.mobile {
+    &:hover {
+      #{$menu}__submenu {
         display: block;
       }
-
-      &.close {
-        position: fixed;
-        right: 1.125rem;
-        background: url(../images/icon-close-menu.svg) center no-repeat;
-      }
     }
 
-    .c-menu {
-      flex: 1 1 auto;
-      display: flex;
-      align-items: center;
-      height: 3.125rem;
-      gap: 2rem;
+    #{$menu}__submenu {
+      @include mixins.submenu;
+      animation: fade 0.4s ease;
+      display: none;
 
-      @include mixins.mobile {
-        display: none;
+      &--left {
+        right: 0;
       }
 
-      .dropdown {
-        position: relative;
-        margin-right: 1rem;
-        display: flex;
-        align-items: center;
+      &__item {
+        width: max-content;
 
-        &::after {
-          content: url(../images/icon-arrow-down.svg);
-          position: absolute;
-          right: -1rem;
+        &:not(:last-of-type) {
+          margin-bottom: 1rem;
         }
+      }
 
-        .c-dropdown__main {
-          @include mixins.dropdown;
-          max-height: 0;
-          opacity: 0;
-          transition: all 0.3s ease-in-out 0.2s;
-
-          .c-menu__link {
-            @include mixins.center;
-            width: max-content;
-            gap: 1rem;
-          }
-        }
-
-        .c-dropdown__main.left {
-          left: 0;
-        }
-        .c-dropdown__main.right {
-          right: -1.25rem;
-        }
-
-        &:hover {
-          &::after {
-            content: url(../images/icon-arrow-up.svg);
-          }
-          .c-dropdown__main {
-            padding: 1.5rem;
-            max-height: 20rem;
-            opacity: 1;
-          }
-        }
+      &__icon {
+        margin-right: 0.5rem;
       }
     }
+  }
+}
 
-    .c-auth__area {
-      @include mixins.center;
-      gap: 2rem;
+.c-auth__area {
+  @include mixins.center;
+  gap: 2rem;
 
-      @include mixins.mobile {
-        display: none;
-      }
+  @include mixins.mobile {
+    display: none;
+  }
 
-      .btn {
-        @include mixins.center;
-        border: 1px solid variables.$gray-400;
-        border-radius: 10px;
-        height: 40px;
-        width: 100px;
+  .btn {
+    @include mixins.center;
+    border: 1px solid variables.$gray-400;
+    border-radius: 10px;
+    height: 40px;
+    width: 100px;
 
-        &:hover {
-          border-color: variables.$black-800;
-        }
-      }
+    &:hover {
+      border-color: variables.$black-800;
     }
   }
 }
@@ -178,21 +160,6 @@ $content: '.c-content';
 
   &--link {
     font-weight: 700;
-  }
-}
-
-#{$overlay} {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-  transition: all 0.4s;
-  opacity: 1;
-  animation: show 0.4s;
-
-  &.hidden {
-    display: none;
   }
 }
 
@@ -327,11 +294,13 @@ $content: '.c-content';
   }
 }
 
-@keyframes show {
+@keyframes fade {
   from {
     opacity: 0;
+    transform: rotateX(-90deg);
   }
   to {
     opacity: 1;
+    transform: rotateX(0);
   }
 }
