--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,10 @@ $content: '.c-content';
   @include mixins.center;
   justify-content: space-between;
   gap: 3rem;
+
+  @include mixins.mobile {
+    padding: 1rem;
+  }
 }
 
 .c-menu__btn {
@@ -29,6 +33,8 @@ $content: '.c-content';
   }
 
   &--close {
+    position: fixed;
+    right: 1rem;
     background: url(../images/icon-close-menu.svg) center no-repeat;
   }
 }
@@ -41,13 +47,33 @@ $content: '.c-content';
   gap: 2rem;
 
   @include mixins.mobile {
-    display: none;
+    position: fixed;
+    inset: 0;
+    height: 100vh;
+    left: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    background-color: white;
+    padding: 5rem 1.5rem;
+    z-index: 10;
+    transform: translateX(100%);
+    transition: all 0.3s ease-out;
+    opacity: 0;
   }
 
   &__item {
     position: relative;
     height: 100%;
     @include mixins.center;
+
+    @include mixins.mobile {
+      height: fit-content;
+      width: 100%;
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
     &:hover {
       #{$menu}__submenu {
@@ -59,6 +85,14 @@ $content: '.c-content';
       @include mixins.submenu;
       animation: fade 0.4s ease;
       display: none;
+
+      @include mixins.mobile {
+        margin-top: 1rem;
+        position: static;
+        padding: 0;
+        margin-left: 1rem;
+        box-shadow: none;
+      }
 
       &--left {
         right: 0;
@@ -77,6 +111,11 @@ $content: '.c-content';
       }
     }
   }
+}
+
+#{$menu}.is-visible {
+  transform: translateX(0);
+  opacity: 1;
 }
 
 .c-auth__area {
@@ -101,18 +140,6 @@ $content: '.c-content';
 }
 
 #{$menuMobile} {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1rem;
-  position: fixed;
-  background-color: white;
-  padding: 5rem 1.5rem;
-  inset: 0;
-  left: 30%;
-  transition: all 0.4s ease-out;
-  z-index: 10;
-
   &.hidden {
     transform: translateX(100%);
     opacity: 0;
