--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,7 @@ $arrow: '.c-menu__link__arrow';
 }
 
 #{$menu} {
+  position: relative;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
@@ -61,6 +62,15 @@ $arrow: '.c-menu__link__arrow';
     transform: translateX(100%);
     transition: all 0.3s ease-out;
     opacity: 0;
+
+    &::before {
+      content: '';
+      position: fixed;
+      inset: 0;
+      transform: translateX(-100%);
+      background-color: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(4px);
+    }
   }
 
   &__item {
