--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ a:hover {
 }
 
 .c-menu {
+  position: relative;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
@@ -85,6 +86,14 @@ a:hover {
     transform: translateX(100%);
     transition: all 0.3s ease-out;
     opacity: 0;
+  }
+  .c-menu::before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    transform: translateX(-100%);
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(4px);
   }
 }
 .c-menu__item {
@@ -118,7 +127,6 @@ a:hover {
 .c-menu__item .c-menu__submenu {
   position: absolute;
   top: 3rem;
-  padding: 1.5rem;
   border-radius: 0.625rem;
   background-color: white;
   box-shadow: 0 1rem 2rem rgba(105, 105, 105, 0.2);
